TPcompile/src/javacc/EXPParser.java
/* EXPParser.java */
/* Generated By:JavaCC: Do not edit this line. EXPParser.java */
package javacc;
import java.io.*;
import java.util.*;

// Déclaration de la classe principale EXPParser
public class EXPParser implements EXPParserConstants {
    private static StringBuilder arbreSyntaxique = new StringBuilder();  // StringBuilder pour stocker l'arbre syntaxique en texte
    private static int profondeur = 0;  // Variable pour suivre la profondeur de l'arbre syntaxique

    // Méthode principale du programme
    public static void main(String[] args) throws ParseException {


        try (BufferedReader reader = new BufferedReader(new InputStreamReader(System.in))) {
            // Boucle infinie pour permettre à l'utilisateur de saisir plusieurs entrées
            while (true) {
                // Affichage des options disponibles à l'utilisateur
              System.out.println("=== Analyseur Syntaxique ===");
             System.out.println("Selectionnez une option :");
            System.out.println("1 - Analyser une chaine saisie manuellement");
               System.out.println("2 - Analyser le fichier 'pgmsrc.exp' dans le repertoire actuel");
           System.out.println("0 - Quitter");
          System.out.print("Votre choix >");

                String input = reader.readLine().trim();  // Lecture de l'entrée de l'utilisateur

                if (input.equalsIgnoreCase("0")) {  // Si l'utilisateur entre "exit", quitter le programme
                    System.out.println("Fin du programme.");
                    break;
                }

                // Si l'utilisateur choisit l'option 1 (analyser une chaîne saisie)
                if (input.equals("1")) {
                    System.out.print("Entrez la chaine a analyser :");
                    String chainInput = reader.readLine().trim();  // Lire la chaîne à analyser
                    EXPParser parser = new EXPParser(new StringReader(chainInput));  // Créer un nouveau parser avec la chaîne d'entrée
                    try {
                        System.out.println("Analyse commence...");
                        parser.Z();  // Appel à la méthode Z() pour commencer l'analyse syntaxique
                        System.out.println("Analyse reussie !");
                        ecrireArbreSyntaxique();  // Sauvegarde de l'arbre syntaxique dans un fichier
                    } catch (ParseException e) {
                        System.out.println("Erreur de syntaxe detectee : " + e.getMessage());  // Gestion des erreurs de syntaxe
                    }
                }
                // Si l'utilisateur choisit l'option 2 (analyser le fichier pgmsrc.exp)
                else if (input.equals("2")) {
                    System.out.println("Le programme va analyser le fichier 'pgmsrc.exp' situ\u00e9 dans le meme repertoire.");
                    String filePath = "pgmsrc.exp";  // Fichier à analyser

                    String fileContent = readFile(filePath);  // Lire le contenu du fichier

                    if (fileContent != null) {
                        // Créer un BufferedReader pour lire le contenu du fichier ligne par ligne
                        BufferedReader fileReader = new BufferedReader(new StringReader(fileContent));
                        String line;
                        // Analyser chaque ligne du fichier
                        while ((line = fileReader.readLine()) != null) {
                            System.out.println("Ligne lue : " + line);  // Afficher la ligne lue
                            EXPParser parser = new EXPParser(new StringReader(line));  // Créer un nouveau parser pour chaque ligne
                            try {
                                System.out.println("Analyse commence...");
                                parser.Z();  // Appel à la méthode Z() pour analyser la ligne
                                System.out.println("Analyse reussie !");
                                ecrireArbreSyntaxique();  // Sauvegarde de l'arbre syntaxique
                            } catch (ParseException e) {
                                System.out.println("Erreur de syntaxe detectee : " + e.getMessage());  // Gestion des erreurs de syntaxe
                            }
                        }
                    } else {
                        System.out.println("Fichier non trouve ou erreur de lecture.");
                    }
                } else {
                    System.out.println("Choix invalide, veuillez entrer '1' ou '2'.");  // Si l'utilisateur fait un choix invalide
                }
            }
        } catch (IOException e) {
            System.out.println("Erreur lors de la lecture de l'entr\u00e9e : " + e.getMessage());  // Gestion des erreurs d'entrée/sortie
        }
    }

    // Méthode pour lire un fichier et retourner son contenu sous forme de chaîne
   //     Ici, on considère qu'il y a un mot par ligne
    private static String readFile(String filePath) {
        StringBuilder content = new StringBuilder();  // StringBuilder pour accumuler le contenu du fichier
        try (BufferedReader fileReader = new BufferedReader(new FileReader(filePath))) {
            String line;
            while ((line = fileReader.readLine()) != null) {
                content.append(line).append("\n");  // Ajouter chaque ligne avec un retour à la ligne
            }
        } catch (IOException e) {
            System.out.println("Erreur de lecture du fichier : " + e.getMessage());  // Gestion des erreurs de lecture
            return null;  // Retourner null en cas d'erreur
        }
        return content.toString();  // Retourner le contenu complet du fichier
    }

    // Méthode pour écrire l'arbre syntaxique dans un fichier
    private static void ecrireArbreSyntaxique() {
        try (BufferedWriter writer = new BufferedWriter(new FileWriter("arbresyntaxique.txt", true))) {
            writer.write(arbreSyntaxique.toString());  // Écrire l'arbre syntaxique dans le fichier
            writer.write("\n\n");  // Ajouter un double saut de ligne pour séparer chaque arbre
            System.out.println("Arbre syntaxique ajout\u00e9 au fichier 'arbresyntaxique.txt'.");
            arbreSyntaxique.setLength(0);  // Réinitialiser le StringBuilder pour le prochain arbre
        } catch (IOException e) {
            System.out.println("Erreur lors de l'\u00e9criture de l'arbre syntaxique : " + e.getMessage());  // Gestion des erreurs d'écriture
        }
    }

    // Méthode pour ajouter un noeud à l'arbre syntaxique avec une indentation
    private static void ajouterNoeud(String noeud) {
        for (int i = 0; i < profondeur; i++) {
            arbreSyntaxique.append("    ");  // Ajouter 4 espaces pour chaque niveau de profondeur
        }
        arbreSyntaxique.append("\u2514\u2500\u2500 ").append(noeud).append("\n");  // Ajouter le noeud avec l'indentation appropriée
    }

    // Méthode pour augmenter la profondeur de l'arbre (imbrication des noeuds)
    private static void augmenterProfondeur() {
        profondeur++;
    }

    // Méthode pour diminuer la profondeur de l'arbre
    private static void diminuerProfondeur() {
        if (profondeur > 0) {
            profondeur--;  // Réduire la profondeur
        }
    }

// Ignorer les espaces, tabulations et retours à la ligne

// Règles de la grammaire
  final public 

void Z() throws ParseException {
augmenterProfondeur();  // Augmenter la profondeur avant d'ajouter un nœud
        ajouterNoeud("Z");  // Ajouter un nœud Z à l'arbre

    M();
    jj_consume_token(0);
diminuerProfondeur();
}

  final public void M() throws ParseException {
augmenterProfondeur();  // Augmenter la profondeur avant d'ajouter un nœud
        ajouterNoeud("M");  // Ajouter un nœud M à l'arbre

    if (jj_2_1(4)) {
      S();
    } else {
      ;
    }
diminuerProfondeur();
}

// Règle de la méthode S
  final public void S() throws ParseException {
EXPParser.ajouterNoeud("S");  // Ajouter un noeud S à l'arbre
        augmenterProfondeur();  // Augmenter la profondeur

    if (jj_2_2(4)) {
      B();
      jj_consume_token(DELIM2);
      A();
    } else if (jj_2_3(4)) {
      A();
      jj_consume_token(DELIM1);
      B();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
diminuerProfondeur();
}

// Règle de la méthode A
  final public void A() throws ParseException {
EXPParser.ajouterNoeud("A");  // Ajouter un noeud A
        augmenterProfondeur();  // Augmenter la profondeur

    if (jj_2_4(4)) {
      B();
      X();
    } else if (jj_2_5(4)) {
      jj_consume_token(REL);
      XPrime();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
diminuerProfondeur();
}

// Règle de la méthode X
  final public void X() throws ParseException {
EXPParser.ajouterNoeud("X");  // Ajouter un noeud X
        augmenterProfondeur();  // Augmenter la profondeur

    if (jj_2_6(4)) {
      jj_consume_token(OP);
      APrime();
    } else if (jj_2_7(4)) {
      jj_consume_token(DELIM2);
      A();
      jj_consume_token(REL);
      XPrime();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
diminuerProfondeur();
}

// Règle de la méthode XPrime
  final public void XPrime() throws ParseException {
EXPParser.ajouterNoeud("X'");  // Ajouter un noeud X'
        augmenterProfondeur();  // Augmenter la profondeur

    if (jj_2_8(4)) {
      S();
      APrime();
    } else {
      APrime();
    }
diminuerProfondeur();
}

// Règle de la méthode APrime
  final public void APrime() throws ParseException {
EXPParser.ajouterNoeud("A'");  // Ajouter un noeud A'
        augmenterProfondeur();  // Augmenter la profondeur

    if (jj_2_9(4)) {
      jj_consume_token(DELIM2);
      B();
      jj_consume_token(REL);
      XPrime();
    } else {

    }
diminuerProfondeur();
}

// Règle de la méthode B
  final public void B() throws ParseException {
EXPParser.ajouterNoeud("B");  // Ajouter un noeud B
        augmenterProfondeur();  // Augmenter la profondeur

    if (jj_2_10(4)) {
      jj_consume_token(REL);
      Y();
    } else if (jj_2_11(4)) {
      jj_consume_token(ID);
      YPrime();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
diminuerProfondeur();
}

// Règle de la méthode Y
  final public void Y() throws ParseException {
EXPParser.ajouterNoeud("Y");  // Ajouter un noeud Y
        augmenterProfondeur();  // Augmenter la profondeur

    if (jj_2_12(4)) {
      S();
      APrime();
      jj_consume_token(ID);
      BPrime();
    } else if (jj_2_13(4)) {
      APrime();
      jj_consume_token(ID);
      BPrime();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
diminuerProfondeur();
}

// Règle de la méthode YPrime
  final public void YPrime() throws ParseException {
EXPParser.ajouterNoeud("Y'");  // Ajouter un noeud Y'
        augmenterProfondeur();  // Augmenter la profondeur

    if (jj_2_14(4)) {
      S();
      BPrime();
    } else {
      BPrime();
    }
diminuerProfondeur();
}

// Règle de la méthode BPrime
  final public void BPrime() throws ParseException {
EXPParser.ajouterNoeud("B'");  // Ajouter un noeud B'
        augmenterProfondeur();  // Augmenter la profondeur

    if (jj_2_15(4)) {
      jj_consume_token(OP);
      APrime();
      jj_consume_token(ID);
      BPrime();
    } else if (jj_2_16(4)) {
      jj_consume_token(DELIM2);
      A();
      jj_consume_token(REL);
      Y();
    } else {

    }
diminuerProfondeur();
}

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_7()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_8()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_9()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_10()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_11()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_12()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_13()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_14()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_15()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_16()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_3R_S_180_5_1()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_2()) {
    jj_scanpos = xsp;
    if (jj_3_3()) return true;
    }
    return false;
  }

  private boolean jj_3_15()
 {
    if (jj_scan_token(OP)) return true;
    if (jj_3R_APrime_224_5_6()) return true;
    if (jj_scan_token(ID)) return true;
    if (jj_3R_BPrime_268_5_9()) return true;
    return false;
  }

  private boolean jj_3R_APrime_224_5_6()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_9()) {
    jj_scanpos = xsp;
    if (jj_3R_APrime_228_37_11()) return true;
    }
    return false;
  }

  private boolean jj_3_7()
 {
    if (jj_scan_token(DELIM2)) return true;
    if (jj_3R_A_191_5_3()) return true;
    if (jj_scan_token(REL)) return true;
    if (jj_3R_XPrime_213_5_5()) return true;
    return false;
  }

  private boolean jj_3R_BPrime_268_5_9()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_15()) {
    jj_scanpos = xsp;
    if (jj_3_16()) {
    jj_scanpos = xsp;
    if (jj_3R_BPrime_272_62_13()) return true;
    }
    }
    return false;
  }

  private boolean jj_3_1()
 {
    if (jj_3R_S_180_5_1()) return true;
    return false;
  }

  private boolean jj_3_8()
 {
    if (jj_3R_S_180_5_1()) return true;
    if (jj_3R_APrime_224_5_6()) return true;
    return false;
  }

  private boolean jj_3_14()
 {
    if (jj_3R_S_180_5_1()) return true;
    if (jj_3R_BPrime_268_5_9()) return true;
    return false;
  }

  private boolean jj_3R_APrime_228_37_11()
 {
    return false;
  }

  private boolean jj_3R_XPrime_213_5_5()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_8()) {
    jj_scanpos = xsp;
    if (jj_3R_XPrime_217_22_10()) return true;
    }
    return false;
  }

  private boolean jj_3R_YPrime_257_5_8()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_14()) {
    jj_scanpos = xsp;
    if (jj_3R_YPrime_261_22_12()) return true;
    }
    return false;
  }

  private boolean jj_3_16()
 {
    if (jj_scan_token(DELIM2)) return true;
    if (jj_3R_A_191_5_3()) return true;
    if (jj_scan_token(REL)) return true;
    if (jj_3R_Y_246_5_7()) return true;
    return false;
  }

  private boolean jj_3_6()
 {
    if (jj_scan_token(OP)) return true;
    if (jj_3R_APrime_224_5_6()) return true;
    return false;
  }

  private boolean jj_3_5()
 {
    if (jj_scan_token(REL)) return true;
    if (jj_3R_XPrime_213_5_5()) return true;
    return false;
  }

  private boolean jj_3_11()
 {
    if (jj_scan_token(ID)) return true;
    if (jj_3R_YPrime_257_5_8()) return true;
    return false;
  }

  private boolean jj_3_3()
 {
    if (jj_3R_A_191_5_3()) return true;
    if (jj_scan_token(DELIM1)) return true;
    if (jj_3R_B_235_5_2()) return true;
    return false;
  }

  private boolean jj_3_12()
 {
    if (jj_3R_S_180_5_1()) return true;
    if (jj_3R_APrime_224_5_6()) return true;
    if (jj_scan_token(ID)) return true;
    return false;
  }

  private boolean jj_3R_X_202_5_4()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_6()) {
    jj_scanpos = xsp;
    if (jj_3_7()) return true;
    }
    return false;
  }

  private boolean jj_3R_Y_246_5_7()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_12()) {
    jj_scanpos = xsp;
    if (jj_3_13()) return true;
    }
    return false;
  }

  private boolean jj_3_4()
 {
    if (jj_3R_B_235_5_2()) return true;
    if (jj_3R_X_202_5_4()) return true;
    return false;
  }

  private boolean jj_3_10()
 {
    if (jj_scan_token(REL)) return true;
    if (jj_3R_Y_246_5_7()) return true;
    return false;
  }

  private boolean jj_3R_A_191_5_3()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_4()) {
    jj_scanpos = xsp;
    if (jj_3_5()) return true;
    }
    return false;
  }

  private boolean jj_3R_BPrime_272_62_13()
 {
    return false;
  }

  private boolean jj_3R_B_235_5_2()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_10()) {
    jj_scanpos = xsp;
    if (jj_3_11()) return true;
    }
    return false;
  }

  private boolean jj_3R_XPrime_217_22_10()
 {
    if (jj_3R_APrime_224_5_6()) return true;
    return false;
  }

  private boolean jj_3_13()
 {
    if (jj_3R_APrime_224_5_6()) return true;
    if (jj_scan_token(ID)) return true;
    if (jj_3R_BPrime_268_5_9()) return true;
    return false;
  }

  private boolean jj_3_2()
 {
    if (jj_3R_B_235_5_2()) return true;
    if (jj_scan_token(DELIM2)) return true;
    if (jj_3R_A_191_5_3()) return true;
    return false;
  }

  private boolean jj_3R_YPrime_261_22_12()
 {
    if (jj_3R_BPrime_268_5_9()) return true;
    return false;
  }

  private boolean jj_3_9()
 {
    if (jj_scan_token(DELIM2)) return true;
    if (jj_3R_B_235_5_2()) return true;
    if (jj_scan_token(REL)) return true;
    if (jj_3R_XPrime_213_5_5()) return true;
    return false;
  }

  /** Generated Token Manager. */
  public EXPParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[0];
  static private int[] jj_la1_0;
  static {
	   jj_la1_init_0();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {};
	}
  final private JJCalls[] jj_2_rtns = new JJCalls[16];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public EXPParser(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public EXPParser(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new EXPParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 0; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public EXPParser(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new EXPParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new EXPParserTokenManager(jj_input_stream);
	}
